--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     },
     "autoload": {
         "psr-4" : {
-            "Testify\\" : "lib/Testify/"
+            "Testify\\" : "lib/Testify/",
+            "App\\": "src/app/"
         }
     }
 }
