--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "keywords": ["unit", "testing", "framework"],
     "license": "GPL",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "pimple/pimple": "1.1.1"
     },
     "autoload": {
         "psr-4" : {
