--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "keywords": ["unit", "testing", "framework"],
     "license": "GPL",
     "require": {
-        "php": ">=5.3.0",
-        "pimple/pimple": "1.1.1"
+        "pimple/pimple": "^3.0"
     },
     "autoload": {
         "psr-4" : {
