--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,22 @@
 {
-    "name": "bafs/testify",
-    "description": "Testify makes writing unit tests fun again. It has an elegant syntax and keeps things simple",
+    "name": "stephankrauss/testify",
     "type": "library",
-    "keywords": ["unit", "testing", "framework"],
-    "license": "GPL",
+    "description": "Simple Php Unit Test Class",
+    "keywords": ["php unit test"],
+    "homepage": "https://unittest.stephankrauss.de",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Stephan Krauss",
+            "email": "info@stephankrauss.de"
+        }
+    ],
     "require": {
-        "pimple/pimple": "^3.0",
-        "webmozart/json": "^1.2"
+        "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-4" : {
-            "Testify\\" : "lib/Testify/",
-            "App\\": "src/app/"
+        "psr-4": {
+            "Testify": "src/Testify"
         }
     }
 }
